Fixed bug #40822 (pdo_mysql does not return rowCount() on select).